Initial Event Edit

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -102,7 +102,7 @@ textarea {
 	@apply px-2 py-1 rounded border border-gray-300 shadow shadow-gray-200 w-full bg-gray-100 text-gray-500
 }
 
-input[type=text], input[type=date], input[type=datetime-local], input[type=email], input[type=password], input[type=tel], input[type=url], textarea, select {
+input[type=text], input[type=date], input[type=datetime-local], input[type=email], input[type=password], input[type=tel], input[type=url], input[type=time], textarea, select {
 	@apply px-2 py-1 rounded border border-gray-300 shadow shadow-gray-200 w-full bg-gray-50
 }
 
