--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -93,11 +93,11 @@
 label {
 	@apply font-medium text-gray-700
 }
-
+/*
 textarea {
 	@apply min-h-[200px]
 }
-
+*/
 .fake-disabled {
 	@apply px-2 py-1 rounded border border-gray-300 shadow shadow-gray-200 w-full bg-gray-100 text-gray-500
 }
