--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -43,7 +43,7 @@
 }
 
 .btn {
-	@apply border rounded-lg px-3 py-2 flex justify-center items-center gap-2 text-sm font-bold whitespace-nowrap
+	@apply text-white text-lg font-semibold py-3 px-6 rounded-lg hover:bg-yellow-700 focus:outline-none
 }
 
 .btn-outline {
@@ -102,7 +102,7 @@ textarea {
 	@apply px-2 py-1 rounded border border-gray-300 shadow shadow-gray-200 w-full bg-gray-100 text-gray-500
 }
 
-input[type=text], input[type=date], input[type=datetime-local], input[type=email], input[type=password], input[type=tel], input[type=url], input[type=time], textarea, select {
+input[type=text], input[type=date], input[type=datetime-local], input[type=email], input[type=password], input[type=tel], input[type=url], input[type=time], input[type=number], textarea, select {
 	@apply px-2 py-1 rounded border border-gray-300 shadow shadow-gray-200 w-full bg-gray-50
 }
 
