--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -43,7 +43,7 @@
 }
 
 .btn {
-	@apply text-white text-lg font-semibold py-3 px-6 rounded-lg hover:bg-yellow-700 focus:outline-none
+	@apply text-white bg-blue-500 font-semibold py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none
 }
 
 .btn-outline {
@@ -171,11 +171,11 @@ select {
 }
 
 .dropdown-menu {
-	@apply absolute hidden flex-col rounded-lg border border-gray-200 bg-gray-50 shadow divide-y right-0 w-fit min-w-[150px]
+	@apply absolute flex-col rounded-lg border border-gray-200 bg-gray-50 shadow divide-y right-0 w-fit min-w-[180px] z-50
 }
 
 .dropdown-link {
-	@apply px-3 py-2 whitespace-nowrap flex justify-between items-center gap-3 hover:bg-gray-100 first:rounded-t-lg last:rounded-b-lg
+	@apply font-bold block w-full text-left px-4 py-2 rounded-lg hover:bg-gray-100
 }
 
 .badge {
