--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -46,6 +46,14 @@
 	@apply text-white bg-blue-500 font-semibold py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none
 }
 
+.btn-green { 
+	@apply text-white bg-green-600 font-semibold py-2 px-4 rounded-lg hover:bg-green-700 focus:outline-none
+}
+
+.btn-red {
+	@apply text-white bg-red-500 font-semibold py-2 px-4 rounded-lg hover:bg-red-600 focus:outline-none
+}
+
 .btn-outline {
 	@apply rounded-lg px-3 py-2 flex items-center gap-2 text-sm font-bold border whitespace-nowrap
 }
