--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -58,6 +58,10 @@
 	@apply text-white bg-red-500 font-semibold py-2 px-4 rounded-lg hover:bg-red-600 focus:outline-none
 }
 
+.btn-gray { 
+	@apply text-white bg-gray-500 font-semibold py-2 px-4 rounded-lg hover:bg-emerald-600 focus:outline-none
+}
+
 .btn-outline {
 	@apply rounded-lg px-3 py-2 flex items-center gap-2 text-sm font-bold border whitespace-nowrap
 }
