Download general schedule and logout message

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -59,8 +59,13 @@
 }
 
 .btn-gray { 
-	@apply text-white bg-gray-500 font-semibold py-2 px-4 rounded-lg hover:bg-emerald-600 focus:outline-none
+	@apply text-white bg-gray-500 font-semibold py-2 px-4 rounded-lg hover:bg-gray-600 focus:outline-none
 }
+
+.btn-gray-disabled {
+	@apply bg-gray-500 text-white text-base font-semibold py-2 px-4 rounded-lg hover:bg-gray-600 opacity-60 cursor-not-allowed
+}
+
 
 .btn-outline {
 	@apply rounded-lg px-3 py-2 flex items-center gap-2 text-sm font-bold border whitespace-nowrap
